force-app/main/default/objects/Product_DO__c/Product_DO__c.object-meta.xml
<CustomObject>
    <label>Product DO</label>
    <nameField>
        <label>Product DO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product DO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>