force-app/main/default/objects/Product_DO__c/fields/DO_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_Code__c</fullName>
    <label>DO Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>