force-app/main/default/objects/Product_DO__c/fields/GUID_Key__c.field-meta.xml
<CustomField>
    <fullName>GUID_Key__c</fullName>
    <externalId>true</externalId>
    <label>GUID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>