force-app/main/default/objects/Product_DO__c/fields/ProductParent__c.field-meta.xml
<CustomField>
    <fullName>ProductParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Parent</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product DO</relationshipLabel>
    <relationshipName>Product_DO</relationshipName>
    <type>Lookup</type>
</CustomField>