force-app/main/default/objects/Product_DO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductParent__c</columns>
    <columns>DO_Code__c</columns>
    <columns>GUID_Key__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>